tests/error/func_code_error.gw
// [contains] in function:
fun void test() { <<<b>>>; }
